// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Проверка кнопки Добавить 1`] = `
<div>
  <div>
    <label>
      Название: 
      Velcom
    </label>
  </div>
  <div>
    <input
      id="all"
      onClick={[Function]}
      type="button"
      value="Все"
    />
    <input
      id="active"
      onClick={[Function]}
      type="button"
      value="Активные"
    />
    <input
      id="blocked"
      onClick={[Function]}
      type="button"
      value="Заблокирвоанные"
    />
  </div>
  <table>
    <thead>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Иванов
        </td>
        <td>
          Иван
        </td>
        <td>
          Иванович
        </td>
        <td>
          200
        </td>
        <td>
          1
        </td>
        <td>
          <input
            disabled={false}
            id="edit"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            disabled={false}
            id="delete"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Петров
        </td>
        <td>
          Петр
        </td>
        <td>
          Петрович
        </td>
        <td>
          250
        </td>
        <td>
          1
        </td>
        <td>
          <input
            disabled={false}
            id="edit"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            disabled={false}
            id="delete"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Сидоров
        </td>
        <td>
          Сидр
        </td>
        <td>
          Сидорович
        </td>
        <td>
          180
        </td>
        <td>
          1
        </td>
        <td>
          <input
            disabled={false}
            id="edit"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            disabled={false}
            id="delete"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Григорьев
        </td>
        <td>
          Григорий
        </td>
        <td>
          Григорьевич
        </td>
        <td>
          220
        </td>
        <td>
          0
        </td>
        <td>
          <input
            disabled={false}
            id="edit"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            disabled={false}
            id="delete"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <input
    disabled={false}
    id="buttonAdd"
    onClick={[Function]}
    type="button"
    value="Добавить клиента"
  />
</div>
`;

exports[`Проверка кнопки Добавить 2`] = `
<div>
  <div>
    <label>
      Название: 
      Velcom
    </label>
  </div>
  <div>
    <input
      id="all"
      onClick={[Function]}
      type="button"
      value="Все"
    />
    <input
      id="active"
      onClick={[Function]}
      type="button"
      value="Активные"
    />
    <input
      id="blocked"
      onClick={[Function]}
      type="button"
      value="Заблокирвоанные"
    />
  </div>
  <table>
    <thead>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Иванов
        </td>
        <td>
          Иван
        </td>
        <td>
          Иванович
        </td>
        <td>
          200
        </td>
        <td>
          1
        </td>
        <td>
          <input
            disabled={true}
            id="edit"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            disabled={true}
            id="delete"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Петров
        </td>
        <td>
          Петр
        </td>
        <td>
          Петрович
        </td>
        <td>
          250
        </td>
        <td>
          1
        </td>
        <td>
          <input
            disabled={true}
            id="edit"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            disabled={true}
            id="delete"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Сидоров
        </td>
        <td>
          Сидр
        </td>
        <td>
          Сидорович
        </td>
        <td>
          180
        </td>
        <td>
          1
        </td>
        <td>
          <input
            disabled={true}
            id="edit"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            disabled={true}
            id="delete"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Григорьев
        </td>
        <td>
          Григорий
        </td>
        <td>
          Григорьевич
        </td>
        <td>
          220
        </td>
        <td>
          0
        </td>
        <td>
          <input
            disabled={true}
            id="edit"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            disabled={true}
            id="delete"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <input
    disabled={true}
    id="buttonAdd"
    onClick={[Function]}
    type="button"
    value="Добавить клиента"
  />
  <div>
    <div>
      <label>
        Id: 
        4
      </label>
      <div>
        <label>
          Фамилия: 
        </label>
        <input
          defaultValue=""
          id="lastName"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
        />
      </div>
      <div>
        <label>
          Имя: 
        </label>
        <input
          defaultValue=""
          id="firstName"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
        />
      </div>
      <div>
        <label>
          Отчество: 
        </label>
        <input
          defaultValue=""
          id="secondName"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
        />
      </div>
      <div>
        <label>
          Баланс: 
        </label>
        <input
          defaultValue={0}
          id="balance"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
        />
      </div>
      <div>
        <label>
          Статус: 
        </label>
        <input
          defaultValue={1}
          id="status"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
        />
      </div>
      <div
        className="EditItemCardComponent"
      >
        <input
          onClick={[Function]}
          type="button"
          value="Добавить"
        />
        <input
          onClick={[Function]}
          type="button"
          value="Отмена"
        />
      </div>
    </div>
  </div>
</div>
`;
